# HTSAgent-Task-Ritwik

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: fullhts_extracted_data.csv  hts_data.duckdb
data/raw/csvfiles/: Dairy produce; birds eggs; natural honey; edible products of animal origin, not elsewhere specified or included.csv  Fish and crustaceans, molluscs and other aquatic invertebrates.csv  Live animals.csv  Meat and edible meat offal.csv  Products of animal origin, not elsewhere specified or included.csv  final_hts_duty_data.csv
notebooks/: Tariff notebook.ipynb  agent.ipynb  rag notebook.ipynb  test1.ipynb
notebooks/chroma_db_/e806706e-96e8-4440-8c6e-0ec3ecea730a/: index_metadata.pickle
src/frontend/: app.py
src/rag_agent/: agentrag.py
src/tariff_agent/: agentsql.py
src/utils/: config.py  raghelper.py
